# TelegramTextual

./: README.md  anon.session  app.py  pyproject.toml  telegram_client.py
screens/: __init__.py
screens/login/: login.py
styles/components/: button.tcss
utils/: css.py
widgets/: __init__.py  button.py
